# lib_keyence_sdk

./: CMakeLists.txt  README.md  main.cpp
Samples/VC_Src/: LkIF2TestVC64.sln  stdafx.cpp  stdafx.h
config/: calibration_setting.ldtx  ethernet_settings.ldtx  new_settings.ldtx
includes/: hardware_feedback.h  keyence_client.h
src/: keyence_client.cpp  main.cpp
